--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </div>
   <!-- brand -->
   <div class="container-fluid">
-    <div class="brand d-flex pt-2 pb-2 container p-5 ">
+    <div class="brand d-flex pt-3 pb-3 container p-5 ">
       <div class="row  ">
         <div class="col col-md-4 col-lg-2">
           <a href=""><img src="img/1-logo-audi-02.png" alt=""></a>
@@ -130,6 +130,221 @@
       </div>
     </div>
   </section>
+  <section>
+    <div class="text-center cba pb-5 ">
+      <div class="pt-5 ">
+        <h5 class="fw-bold">Built for developers trusted by global organizations</h5>
+        <p>See why FREE ranked #1 in the omdia locatin platform index for second year </br> runing</p>
+       <!-- ****************** -->
+        <div class="d-md-flex d-lg-flex container-fluid justify-content-center">
+          <div class="p-2">
+            <button type="button" class=" btn equ_b rounded-pill">Download media report</button>
+          </div>
+          <div class="p-2">
+            <button type="button" class="  btn equ_b rounded-pill">Contact With us</button>
+          </div>
+        </div>
+        <!-- ******************* -->
+      </div>
+    </div>
+    </section>
+      <section>
+        <div class="container ">
+          <div class="py-5 text-center" >
+            <h3>
+              Unlock the power of your location data
+            </h3>
+          </div>
+
+
+          <div class="px-5 row">
+            <div class="card-group d-md-flex ">
+              <div class="card px-2 ">
+                <img src="img/service.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h6 class="card-title fw-bold">Use case</h6>
+                  <h5 class="fw-bold">Supply Chain Optimization</h5>
+                  <p class="card-text"><small class="text-muted">Provide seamless and connected multi-modal jurneys for your customer and passengers.</small></p>
+                  <a href=""><img class="sz" src="img/circle-right-solid.svg" alt=""></a>
+                </div>
+              </div>
+
+              <div class="card px-2 ">
+                <img src="img/service2.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h6 class="card-title fw-bold">Use case</h6>
+                  <h5 class="fw-bold">Consumer Engagement</h5>
+                  <p class="card-text"><small class="text-muted">Provide seamless and connected multi-modal jurneys for your customer and passengers.</small></p>
+                  <a href=""><img class="sz" src="img/circle-right-solid.svg" alt=""></a>
+                </div>
+              </div>
+
+              <div class="card px-2 ">
+                <img src="img/service3.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h6 class="card-title fw-bold">Use case</h6>
+                  <h5 class="fw-bold">Urban Mobility</h5>
+                  <p class="card-text"><small class="text-muted">Provide seamless and connected multi-modal jurneys for your customer and passengers.</small></p>
+                  <a href=""><img class="sz" src="img/circle-right-solid.svg" alt=""></a>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="help_bar ">
+        <div class="container">
+          <div class="row container mt-3">
+            <div class="col-md-5 col- text-white px-4 pt-5">
+              <h2>
+                Let's talk
+              </h2>
+              <p>
+                Our plat form provide comprehensive mapping content an integrated Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam </br>
+                aute irure dolor in reprehenderit in voluptate velit cillum dolore eu nulla pariatur. Excepteur sint occaecat cupidatat non
+              </p>
+
+            </div>
+            <!-- ++++++++++++++++++++ -->
+            <div class="col-11 col-md-7 ps-5 pt-4">
+              <div class="text-white py-2">
+               <h6> How can we help you?</h6>
+              </div>
+                <div class="col-12">
+                  <select class="form-select form-select mb-3 " aria-label=".form-select-lg example">
+                    <option selected>MERN</option>
+                    <option value="1">Front-end</option>
+                    <option value="2">Back-end</option>
+                    <option value="3">Python</option>
+                    <option value="3">C++</option>
+                  </select>
+                </div>
+                <div class="col-12 row g-1">
+                  <div class="col-md-6 ">
+                    <label for="">First Name</label>
+                    <input class="form-control form-control" type="text" placeholder="First Name" aria-label=".form-control-lg example">
+                  </div>
+                  <div class=" col-md-6">
+                    <label for="">Last Name</label>
+                    <input class="form-control form-control" type="text" placeholder="Last Name" aria-label=".form-control-lg example">
+                  </div>
+                </div>
+                <div class="col-12 row g-1">
+                  <div class="col-md-6">
+                    <label for="">Email address</label>
+                    <input class="form-control form-control" type="text" placeholder="Enter Your email" aria-label=".form-control-lg example">
+                  </div>
+                  <div class="col-md-6 ">
+                    <label for="">Country/Territory</label> 
+                    <select class="form-select form-select mb-3 " aria-label=".form-select-lg example">
+                      <option selected>Choice your Country</option>
+                      <option value="1">Bangladesh</option>
+                      <option value="2">Saudi-Arabia</option>
+                      <option value="3">UAE</option>
+                    </select>
+                  </div>
+                </div>
+
+                <div class="form-check">
+                  <input class="form-check-input mt-3" type="checkbox" value="" id="flexCheckChecked" checked>
+                  <label class="form-check-label" for="flexCheckChecked">
+                    Would you like to receive relevant update more from HERE Technologies by email
+                  </label>
+                </div>
+                <button class="btn btn-primary">
+                  Submit
+                </button>
+            </div>
+          <!-- ------------------- -->
+
+          <div class="container">
+            <h4 class="font-weight-bold pb-4 mt-5">Ready to get Started</h4>
+            <div class="row p-4">      
+              <div class="col-lg-4">
+                <h5  class="text-white">Start Building</h5>
+                <p class="text-secondary py-2">Here offers compresive support and documation for javascript Rest and naive mobail applications.Start a free trial of your API todays</p>
+                <a href="#" class="rounded-pill border-success text-light btn" role="button" aria-pressed="true">Sign up free</a>
+              </div>
+              <div class="col-lg-4">
+                <h5 class="text-white">Update yours vehicle map</h5>
+                <p class="text-secondary py-2">Here offers compresive support and documation for javascript Rest and naive mobail applications.Start a free trial of your API todays</p>
+                <a href="#" class="rounded-pill border-success text-light btn" role="button" aria-pressed="true">Update my map</a>
+              </div>
+              <div class="col-lg-4">
+                <h5  class="text-white">Find a Product</h5>
+                <p class="text-secondary py-2">Here offers compresive support and documation for javascript Rest and naive mobail applications.Start a free trial of your API todays</p>
+                <a href="#" class="rounded-pill border-success text-light btn" role="button" aria-pressed="true">Explore product</a>
+              </div>
+            </div>  
+          </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+<!-- ######### -->
+    <footer class="footer_custom pt-5">
+      <div class="container">
+        <div class="row mt-5 justify-content-center">
+          <div class="col-lg-3">
+           <p class="text-light h4">HERE.com</p>
+          </div>
+          <div class="col-lg-3 text-uppercase">
+            <a href="#">About us </a><br>
+            <a href="#">Careers</a><br>
+            <a href="#">HERE Offices</a><br>
+            <a href="#">Brand Guidelines</a><br>
+            <a href="#">Suppliers</a><br>
+            <a href="#">Contct us</a><br>
+          </div>
+          <div class="col-lg-3 text-uppercase">
+            <a href="#">Gdpr  statement and fac</a><br>
+            <a href="#">consent preferences</a><br>
+            <a href="#">legal</a><br>
+            <a href="#">security</a><br>
+            <a href="#">privecy & cookie polocy</a><br>
+            <a href="#">privecy chrter</a><br>
+          </div>
+          <div class="col-lg-3 text-uppercase">
+            <a href="#">code of conduct </a><br>
+            <a href="#">drive schedule</a><br>
+            <a href="#">HERE we go map</a><br>
+            <a href="#">map community</a><br>
+            <a href="#">map update</a><br>
+            <a href="#">dont sell my info</a><br>
+          </div>
+        </div>
+          <span class="mt-5 marzin"></span>
+      </div>
+  
+      <div class="container">
+      <div class="row justify-content-center py-5">
+      <div class="col-8">
+        <img src="img/logo-theme-dark.svg" alt="logo">
+      </div>
+      <div class="col-4 text-light px-4">
+        &copy;2020 HERE
+        <img src="images/" alt="">
+        <img src="img/youtube.png" alt="youtube">
+        <img src="img/whatsapp.png" alt="whatsapp">
+        <img src="img/twitter.png" alt="twitter">
+        <img src="img/linkedin.png" alt="linkedin">
+        <img src="img/facebook.png" alt="facebook">
+      </div>
+     </div>
+   </div>
+    </footer>
+
+
+
+
+
+<!--  -->
+
+    
+      
+
 
 
 
